2008-10-04  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c: small cleanup patch by Kristian Rumberg.

2008-09-11  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-remote-connect-dialog.c:
	  Translators warning added

2008-09-01  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (fill_props_model):
	skip gvfs fuse mounts in Preferences dialog.

2008-08-30  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: Skip all subdirs of ~/.gvfs in order to avoid
	scanning gvfs fuse mounts as local files. It would be cool to have
	a less hackish way to do it. Fixes #533878

2008-08-04  Paolo Borelli  <pborelli@katamail.com>

	Patch contributed by Eduardo Lima <elima@igalia.com>, bug #541407

	* src/baobab-chart.c:
	* src/baobab.c:
	* src/baobab-ringschart.c:
	* src/baobab-chart.h:
	* src/baobab.h:
	* src/baobab-rngschart.h:
	* src/callbacks.c:
	* src/callbacks.h:

	Reimplemeny the ringschart as a subclass of BaobabChart.

2008-07-25  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: do not leak file info when stopping scan.

2008-07-25  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-treemap.c: include headers to fix compiler warnings.

2008-07-25  Fabio Marzocca  <thesaltydog@gmail.com>

	Patch contributed by Matthias Clasen <mclasen@redhat.com>, bug #544637
	USe standard icon names
	
	* src/gedit-spinner.c:

2008-07-13  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.1: fixed a typo on email address.

2008-06-30  Alejandro G. Castro <acastro@igalia.com>

	* src/baobab-treemap.h: Fixed a typo applying the last patch.

2008-06-28  Alejandro G. Castro <acastro@igalia.com>

	Patch contributed by Eduardo Lima <elima@igalia.com>, bug #530512

	Implemented a new treemap object and moved into the main window,
	now we can select with a combobox in the main window which graph
	we want: ringschart or treemap. We have used the ringschart code
	in order to create a new abstract class and the new treemap just